--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </body>
     
-    <script>
+    <script type="text/javascript">
         function startTime() {
             var today = new Date();
             var h = today.getHours();
@@ -31,7 +31,7 @@
             var s = today.getSeconds();
             m = checkTime(m);
             s = checkTime(s);
-            $('#time').html(h+":"+m+":"+s);
+            $('#time').html(h+" : "+m+" : "+s);
             var t = setTimeout(function(){
                 startTime() },500);
             
