--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         }
         
         $(document).ready(function () {
+            $("body").css({"transition": "all 0.8s", "-webkit-transition": "all 0.8s"});
             startTime(); 
         });
     </script>
