--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </body>
     
     <script type="text/javascript">
-        var hackmode = true;
+        var hackmode = false;
         
         function startTime() {
             var today = new Date();var h = today.getHours();var m = today.getMinutes();var s = today.getSeconds();
